<resources>
    <string name="app_name">Whoever</string>
    <string name="facebook_app_id">956027404432402</string>

    <string name="login_error">login error, try again or skip login</string>
    <string name="login_cancel">skip login if you want</string>

    <string name="ssoId_text">Account ID</string>
    <string name="password_text">Password</string>
    <string name="nick_name_text">Nick name</string>

    <string name="hind_input_ssoId">Your Account</string>
    <string name="hind_input_password">Your password</string>
    <string name="text_button_signin">Login</string>
    <string name="text_button_skip">Use anonymous</string>
    <string name="text_forgot_password"><u>Forgot password?</u></string>
    <string name="text_button_signup">Create new account</string>
    <string name="text_register_account">Register in here</string>
    <string name="text_to_new_user"><u>Sign Up for Whoever</u></string>
    <string name="text_term_user"><u>Term of Service</u></string>
    <string name="text_term_agree">I agree to the Term of Service Whoever</string>
    <string name="text_ssoId_example">anonymous</string>
    <string name="text_password_example">******</string>
    <string name="text_name_example">anonymous</string>
    <string name="text_have_account"><u>Have a account?</u></string>

    <string name="text_view_birthday">Birthday</string>
    <string name="text_view_language">Language</string>

    <string name="text_view_welcome0">Welcome you to</string>
    <string name="text_view_welcome1">Whoever</string>
    <string name="text_view_welcome2">Social networking anonymous for you.</string>
    <string name="text_default_birthday">01/01/2000</string>
    <string name="text_default_language">English</string>

    <string name="text_button_pushapp">Push</string>

    <string name="title_tab_home">Home</string>
    <string name="title_tab_new">NewsFeed</string>
    <string name="title_tab_inbox">Inbox</string>
    <string name="title_tab_contact">Contacts</string>

    <string name="text_btn_search">Search</string>

    <string name="text_direct_to_profile">View your profile</string>
    <string name="text_overview_favorites">Favorites</string>
    <string name="text_overview_group">Groups</string>
    <string name="text_overview_help_and_setting">Help &amp; Setting</string>

    <string name="text_write_status">Post to Whoever</string>
    <string name="text_choice_show_near">Show nearby people</string>


    <!-- String for Overview layout -->

    <string name="text_app_setting">App Setting</string>
    <string name="text_account_setting">Account Setting</string>
    <string name="text_help_center">Help Center</string>
    <string name="text_activity_log">Activity Log</string>
    <string name="text_privacy">Privacy</string>
    <string name="text_term_policies">Terms &amp; Policies</string>
    <string name="text_ablout">About</string>
    <string name="text_report">Report problem</string>
    <string name="text_logout">Log Out</string>
    <string name="text_profile">Your Profile</string>

    <string name="text_privacy_in_post_status">Use:</string>
    <string name="text_privacy_with_account">Account</string>
    <string name="text_privacy_with_anonymous">Anonymous</string>

    <string name="text_hind_box_write_status">Write something...</string>

    <string name="text_rank_world">Top on World</string>
    <string name="text_rank_language">Top on Language</string>
    <string name="text_create_group">Create new Group</string>
    <string name="text_comment_header">Comments</string>

    <string name="text_load_data">Waiting load data &amp; setting</string>
</resources>
