<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/postStatusFrame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/toolBarFromPostStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorRedMain">

        <ImageButton
            android:id="@+id/btnBackFromPostStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorRedMain"
            android:padding="12dp"
            android:src="@drawable/icon_back" />

        <ImageButton
            android:id="@+id/btnSendStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorRedMain"
            android:padding="12dp"
            android:src="@drawable/icon_send" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnSendStatus"
            android:layout_toRightOf="@+id/btnBackFromPostStatus">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="14dp"
                android:text="@string/text_write_status"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toolBarChoicePrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBarFromPostStatus">

        <TextView
            android:id="@+id/textViewPrivacyPostStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:text="@string/text_privacy_in_post_status"
            android:textColor="@color/colorSilverBlack"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/symbolUseAccountPostStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textViewPrivacyPostStatus"
            android:src="@drawable/icon_account" />

        <TextView
            android:id="@+id/textShowUseAccountPostStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/symbolUseAccountPostStatus"
            android:text="@string/text_privacy_with_account"
            android:textColor="@color/colorButtonMain"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/symbolPrivacyPostStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/textShowUseAccountPostStatus"
            android:src="@drawable/icon_lock_red" />

        <TextView
            android:id="@+id/textShowPrivacyPostStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/symbolPrivacyPostStatus"
            android:text="Friends"
            android:textColor="@color/colorButtonMain"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_navigate" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/textViewPrivacyPostStatus"
            android:background="@color/colorRedMain" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/contentPostStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/toolBarChoicePrivacy"
        android:background="@color/colorSilverWhite">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/listViewPhotoPostStatus"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            card_view:cardCornerRadius="3dp"
            card_view:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/contentTextInputStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="7sp"
                android:background="@color/colorWhite"
                android:gravity="top|left"
                android:hint="@string/text_hind_box_write_status"
                android:scrollbars="vertical"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

        <GridView
            android:id="@+id/listViewPhotoPostStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:numColumns="3"
            android:visibility="visible">

        </GridView>
    </RelativeLayout>
</RelativeLayout>
